# scilm

./: LICENSE  README.md  pyproject.toml
caao/: inference.py  setup_prompt.py
core/: inference.py  lm.py
sci_lm/: inference.py  lm.py  setup_prompt.py
