[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sci_lm"
version = "0.0.1"
description = "A local AI companion assistant."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Kandarpa" }
]

dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "numpy",
    "requests",
    "rich"
]

[tool.setuptools.packages.find]
include = ["sci_lm*"]